[package]
name = "prefixtree"
version = "0.1.0"
authors = ["Emeric Chevalier <emericchevalier.pro@gmail.com>"]
repository = "https://github.com/cheme/prefixtree"
license = "Apache-2.0"
edition = "2018"


[dependencies]
#smallvec = "1.0.0"

[dev-dependencies]
#criterion = "0.2.8"


[features]
default = ["std"]
std = [
]
